--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
+    "@popperjs/core": "^2.11.8",
     "ag-grid-angular": "^30.0.6",
     "ag-grid-community": "^30.0.6",
     "bootstrap": "^5.2.3",
